fix: vehicle and reservation window on mobile first

--- a/client/src/styles/VehiclesInfosList.css
+++ b/client/src/styles/VehiclesInfosList.css
@@ -1,9 +1,16 @@
 .vehicles-info-container {
   background-color: var(--beige-color);
   padding: 2rem 1.5rem;
-  border-radius: 1rem;
+  border-radius: 1rem 1rem 0 0;
   overflow-y: auto;
-  height: 80%;
+  height: 100vh;
+}
+
+@media screen and (min-width: 768px) {
+  .vehicles-info-container {
+    height: 80%;
+    border-radius: 1rem !important;
+  }
 }
 
 @media screen and (width > 1000px) {
